--- a/template/404.html
+++ b/template/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -29,10 +29,11 @@
 <header>
     <div class="hd-top">
         <div class="container">
-        	<div class="hdtop-left pull-left">
-            	<p>Welcome <a href="#">Guest !</a></p>
+          <div class="hdtop-left pull-left">
+              <p>Welcome <a href="#">Guest !</a></p>
                 <p><i class="fa fa-phone"></i>Call to order 099-412035 / 9809496968</p>
             </div>
+        
             
 <ul class="pull-right">
    <div class="btn-group">
@@ -59,9 +60,9 @@
       </li>
    </div>
 </ul>
-            
         </div><!-- container end -->
     </div><!-- hd-top end -->
+
     
     <div class="hd-bottom">
         <div class="container">
@@ -93,60 +94,57 @@
             </div><!-- row end -->
           </div>
         </div>
-         <!-- container end -->
+          <div class="container">
+
+            
+            <div class="row">
+                         <div class="col-sm-12 col-md-1 mrgb-30"></div>
+
+                          <div class="col-sm-12 col-md-10 mrgb-30">
+
+               <!--  <nav class="col-sm-offset-3 col-md-offset-3 col-md-9"> -->
+                    
+                
+            </div>
+            
+            <div class="wsmenucontent overlapblackbg"></div>
+            <div class="wsmenuexpandermain slideRight">
+                <a id="navToggle" class="animated-arrow slideLeft"><span></span></a>
+            </div>
+            
+        </div><!-- container end -->
   <!--  </div> hd-bottom end -->
-     </header>
+    </div>
 </header><!-- header end -->
-<div class="container">
+    <section class="main-body">
+  <div class="container">
       <div class="row">
-<div class="col-sm-12 col-md-12 mrgb-30">
-              
+          
+            <div class="col-sm-12 col-md-12 mrgb-30">
+             
                 
                 <div class="heading-all mrgb-20">
                   <div class="clearfix">
-                        <h1>Login</h1>
+                        <h1>404 Page Not Found</h1>
                     </div>
                     <div class="hding-sept"></div>
                 </div>
-                
-                
-               <div class="row">
-                <div class="col-sm-6 col-md-6">
-                  <div class="clearfix mrgb-30">
-                    <h3 class="mrgb-10">I am a new customer</h3>
-                    <h4 class="font-14 mrgb-10">Register Account</h4>
-                    <p class="mrgb-20">By creating an account you will be able to order faster, be up to date on  an order's
-                      status, keep track of the order you have previously made. </p>
-                    <a href="#" class="btn-all">Register</a> 
-                  </div>
+        
+               <div class="error-wrap">
+                  <h1 class="mrgb-30">Error 404!</h1>
+                  <h1 class="error-indicator mrgb-30"><i class="fa fa-warning"></i></h1>
+                  <h2 class="mrgb-10">We are Sorry !!!</h2>
+                  <h3 class="mrgb-10">The page you are looking for could not found.</h3>
+                  <h3>Please Check Top Menu.</h3>
                 </div>
-                <div class="col-sm-6 col-md-6">
-                  <div class="clearfix mrgb-30">
-                    <h3 class="mrgb-10">I am a returning customer</h3>
-                    <form method="post" action="./">
-                      <span >Login Id or email address</span>
-                      <input type="text" name="email" class="form-control mrgt-10 mrgb-10"/>
-                      <span class="mrgb-20">Password</span>
-                      <input type="password" name="loginpassword" class="form-control mrgt-10 mrgb-10" />
-                      <span><a href="./" class="font-14 active-text">Forget Password</a></span>
-                      <div class="btn-wrap">
-                        <input type="submit" name="btnsubmit" value="login" class="btn-all mrgt-10 mrgb-10 pull-right"/>
-                      </div>
-                    </form>
-                  </div>
-                  <!--right closed--> 
-                  
-                </div>
-           </div><!-- row end -->
-                
-                
-              
-                  
-            </div>
-          </div>
-        </div>
+                <!--404-wrap closed-->        
+                    
+           </div>
+         </div>
+       </div>
+     </section>
 
-<footer>
+    <footer>
   <div class="foot-top">
       <div class="container">
           <div class="row">
