--- a/template/restaurentregister.html
+++ b/template/restaurentregister.html
@@ -34,14 +34,31 @@
                 <p><i class="fa fa-phone"></i>Call to order 099-412035 / 9809496968</p>
             </div>
             
-            <div class="top-links">
-                <button id="linkButton">Account <i class="fa fa-angle-down"></i></button>
-                <ul class="pull-right">
-                    <li><a href="myaccount.html">My Account</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="register.html">Register</a></li>
-                </ul>
-            </div>
+            <ul class="pull-right">
+   <div class="btn-group">
+      <li>
+         <a href="login.html"><button type="button" class="btn btn-primary">
+         Login
+         </button></a>
+      </li>
+      <li>
+         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Register
+         </button>
+         <div class="dropdown-menu">
+            <a class="dropdown-item" href="restaurentregister.html">Register As Restaurent</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="userregister.html">Register As User</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="driverregister.html">Register As Driver</a>
+         </div>
+      </li>
+      <li> <a href="myaccount.html"><button type="button" class="btn btn-primary">
+         Account
+         </button></a>
+      </li>
+   </div>
+</ul>
             
         </div><!-- container end -->
     </div><!-- hd-top end -->
@@ -66,11 +83,11 @@
                     </div>
                 </div>
                 
-                  <div class="col-sm-3 col-md-2">
-                    <a href="cart.html"><button class="hd-cart pull-right">
+                <div class="col-sm-3 col-md-2">
+                    <button class="hd-cart pull-right">
                         <span class="text">CART</span>
                         <span class="cart-count">10</span>
-                    </button></a>
+                    </button>
                 </div>
                 
             </div><!-- row end -->
