--- a/template/index.html
+++ b/template/index.html
@@ -33,18 +33,36 @@
             	<p>Welcome <a href="#">Guest !</a></p>
                 <p><i class="fa fa-phone"></i>Call to order 099-412035 / 9809496968</p>
             </div>
+        
             
-            <div class="top-links">
-                <button id="linkButton">Account <i class="fa fa-angle-down"></i></button>
-                <ul class="pull-right">
-                    <li><a href="myaccount.html">My Account</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="register.html">Register</a></li>
-                </ul>
-            </div>
-            
+<ul class="pull-right">
+   <div class="btn-group">
+      <li>
+         <a href="login.html"><button type="button" class="btn btn-primary">
+         Login
+         </button></a>
+      </li>
+      <li>
+         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Register
+         </button>
+         <div class="dropdown-menu">
+            <a class="dropdown-item" href="restaurentregister.html"><i class="fa fa-cutlery" aria-hidden="true"></i>Register As Restaurent</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="userregister.html"><i class="fa fa-user" aria-hidden="true"></i>Register As User</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="driverregister.html"><i class="fa fa-car" aria-hidden="true"></i>Register As Driver</a>
+         </div>
+      </li>
+      <li> <a href="myaccount.html"><button type="button" class="btn btn-primary">
+         Account
+         </button></a>
+      </li>
+   </div>
+</ul>
         </div><!-- container end -->
     </div><!-- hd-top end -->
+
     
     <div class="hd-bottom">
         <div class="container">
@@ -66,11 +84,11 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-3 col-md-2">
-                    <button class="hd-cart pull-right">
+                  <div class="col-sm-3 col-md-2">
+                    <a href="cart.html"><button class="hd-cart pull-right">
                         <span class="text">CART</span>
                         <span class="cart-count">10</span>
-                    </button>
+                    </button></a>
                 </div>
                 
             </div><!-- row end -->
@@ -86,7 +104,7 @@
 
                <!--  <nav class="col-sm-offset-3 col-md-offset-3 col-md-9"> -->
                     
-                </nav>
+                
             </div>
             
             <div class="wsmenucontent overlapblackbg"></div>
@@ -96,7 +114,7 @@
             
         </div><!-- container end -->
   <!--  </div> hd-bottom end -->
-    
+    </div>
 </header><!-- header end -->
     
 
